front end for manga new and edit page

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,5 +1,5 @@
-// text style
-*{
+text style
+* {
   margin: 0;
   padding: 0;
 }
@@ -12,5 +12,4 @@ h1, h2, h3, h4, h5, h6, p, hr, form {
 // svg icon from font awesome
 i {
   color: #FFFFD2;
-  font-size: 1.5em;
 }
