--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -67,3 +67,12 @@
     background: #80B29D;
   }
 //
+
+
+// nav search bar
+input[type="text_field"] {
+  background-color: #A8EACE;
+  color: white;
+  border: none;
+  width:100%;
+}
