--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,7 +12,7 @@
 .form-control {
   font-family: 'Roboto', sans-serif;
   color: #0a0a0a;
-  background-color: #A8EACE;
-  position: relative;
+  // background-color: #A8EACE;
+  // position: relative;
   border-radius: 10px;
 }
