--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,8 +1,9 @@
 .avatar {
-  width: 60px;
+  width: 40px;
   height: auto;
   border-radius: 50%;
 }
+
 .avatar-large {
   width: 80px;
   height: auto;
@@ -32,4 +33,6 @@
   background-color: #A8EACE;
   padding: 0.5em;
   border-radius: 50%;
+  width: 100px;
+  height: auto;
 }
