--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import 'star-rating.js/dist/star-rating.min';
+@import 'jquery-bar-rating/dist/themes/fontawesome-stars';
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
