--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -4,5 +4,5 @@
   <%= link_to 'Back', dashboard_index_path %>
 
   <h1 class="d-flex justify-content-center"><i class="fa-solid fa-star"></i>New Manga<i class="fa-solid fa-star"></i></h1>
-  <%= render "formmanga", manga: @manga%>
+  <%= render "form_manga", manga: @manga%>
 </div>
