--- a/app/views/mangas/_form_manga.html.erb
+++ b/app/views/mangas/_form_manga.html.erb
@@ -33,7 +33,8 @@
       <input type="file" id="images" accept="image/*" required>
     </label>
 
-  <div class="actions">
-    <%= form.submit "Submit", class:"btn btn-primary" %>
+    <div>
+      <%= form.submit "Submit", class:"btn btn-primary" %>
+    </div>
   </div>
 <% end %>
