front end for chapter edit the same now

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -5,6 +5,7 @@ text style
 }
 
 h1, h2, h3, h4, h5, h6, p, hr, form {
+  font-family: Arial, sans-serif;
   color: #FFFFD2;
   text-shadow: 1px 1px 3px rgba(128, 107, 0, 0.4);
 }
