--- a/app/assets/stylesheets/pages/_chaptershow.scss
+++ b/app/assets/stylesheets/pages/_chaptershow.scss
@@ -49,18 +49,9 @@
   }
 
   .button:hover {
-    background-color: #0056b3;
+    background-color: #80B29D;
+    color: #fff;
   }
-
-  .form-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #eaeaea;
-  border-radius: 5px;
-}
-
 
 
 .form-label {
@@ -100,7 +91,6 @@ body {
     color: #000;
   }
 
-  .form-container,
   .reviews-container {
     background-color: #fff;
     padding: 20px;
@@ -133,12 +123,12 @@ body {
     font-weight: bold;
   }
 
-  ul {
+  .review-ul {
     list-style-type: none;
     padding: 0;
   }
 
-  li {
+  .review-li {
     padding: 10px;
     margin-bottom: 10px;
     background-color: #f4f4f4;
