--- a/app/assets/stylesheets/pages/_chaptersindex.scss
+++ b/app/assets/stylesheets/pages/_chaptersindex.scss
@@ -1,12 +1,6 @@
-  body {
-    background-color: #f4f4f4;
-    color: #333;
-  }
-
   table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 20px;
   }
 
   th,
@@ -17,7 +11,7 @@
   }
 
   th {
-    background-color: #333;
+    background-color: #80B29D;
     color: #fff;
     font-weight: bold;
   }
