Revert "front end for manga new and edit page"

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,10 +9,10 @@
 
 // TODO: Mary
 // Search bar
-// .form-control {
-//   font-family: 'Roboto', sans-serif;
-//   color: #0a0a0a;
-//   // background-color: #A8EACE;
-//   // position: relative;
-//   border-radius: 10px;
-// }
+.form-control {
+  font-family: 'Roboto', sans-serif;
+  color: #0a0a0a;
+  background-color: #A8EACE;
+  position: relative;
+  border-radius: 10px;
+}
