--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,7 +22,7 @@
     width: 65%;
     height: 45px;
     align-self: center;
-    // background: linear-gradient(#A8EACE, #ccc);
+    background: linear-gradient(#A8EACE, #ccc);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     border-radius: 25px;
@@ -71,9 +71,4 @@ li:hover{
   text-decoration: none;
   background-color: #A8EACE;
   color: black;
-}
-
-
-.nav-div{
-  background-color: yellow;
 }
