--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "components/background";
 
 // TBC
+@import "pages/edit";
 @import "pages/chapterslist";
 @import "pages/chaptershow";
+@import "pages/chaptersnew";
 @import "pages/chaptersindex";
