--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,11 +1,10 @@
-text style
-* {
+// text style
+*{
   margin: 0;
   padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6, p, hr, form {
-  font-family: Arial, sans-serif;
   color: #FFFFD2;
   text-shadow: 1px 1px 3px rgba(128, 107, 0, 0.4);
 }
@@ -13,4 +12,5 @@ h1, h2, h3, h4, h5, h6, p, hr, form {
 // svg icon from font awesome
 i {
   color: #FFFFD2;
+  font-size: 1.5em;
 }
