login page button fixed

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,1 +1,6 @@
 // Import page-specific CSS files here.
+
+// TBC
+@import "pages/chapterslist";
+@import "pages/chaptershow";
+@import "pages/chaptersindex";
