--- a/app/assets/stylesheets/pages/_chaptersindex.scss
+++ b/app/assets/stylesheets/pages/_chaptersindex.scss
@@ -1,8 +1,3 @@
-  body {
-    background-color: #f4f4f4;
-    color: #333;
-  }
-
   table {
     width: 100%;
     border-collapse: collapse;
@@ -17,22 +12,15 @@
   }
 
   th {
-    background-color: #333;
+    background-color: #80B29D;
     color: #fff;
     font-weight: bold;
   }
 
   tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: rgba(205, 255, 234, 0.5);
   }
 
   a {
-    text-decoration: none;
-    color: black;
-  }
-
-  .new-chapter-btn:hover,
-  .back-to-manga-btn:hover {
-    background-color: #0056b3;
     text-decoration: none;
   }
