--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,7 +34,7 @@
 
   <div class="form-actions">
     raise
-    <%= f.button :submit, "Update", class: "btn btn-primary" %>
+    <%= f.button :submit, "Update", class: "button" %>
   </div>
 <% end %>
 
@@ -42,4 +42,4 @@
 
 <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, class: "button" %>
