--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,9 +43,11 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+      <%= f.button :submit, "Sign up", class: "button" %>
     </div>
-  <% end %>
 
-  <%= render "devise/shared/links" %>
+  <% end %>
 </div>
+  <div class="d-flex justify-content-center border border-primary">
+    <%= render "devise/shared/links" %>
+  </div>
