--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,25 +10,24 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <%# PG-search bar %>
+    <%# AJAX-search bar %>
 <div class="collapse navbar-collapse border border-primary" id="navbarSupportedContent" data-controller="search">
-    <div class="d-flex flex-row w-100 justify-content-between border border-primary">
-      <ul class="navbar-nav">
-        <ul class="navbar-nav">
-        <%= form_with url: mangas_path, method: :get, remote: false, html: { class: "d-flex search-form" }, data: { target: "search.form"}, id: "search-form" do |form| %>
-            <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2",
-              data: { target: "search.query",
-              action: "keyup->search#searchManga" } %>
-                  <%= form.label :dropdown_field %>
-                  <%= form.select :dropdown_field, [], {}, data: { target: "search.dropdown" }, id: "dropdown-select" %>
-            <%= form.submit "Search", class: "btn btn-outline-primary" %>
-          <% end %>
-        </ul>
-      <ul class="navbar-nav"></ul>
-      <div >
-      </div>
-    </div>
+  <div class="search-and-dropdown">
+    <ul class="navbar-nav">
+      <%= form_with url: mangas_path, method: :get, remote: false, html: { class: "d-flex search-form" }, data: { target: "search.form"}, id: "search-form", name: "unique_name_#{SecureRandom.hex}" do |form| %>
+        <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2",
+          data: { target: "search.query",
+          action: "keyup->search#searchManga" },
+          autocomplete: "new-password" %>
+          <button type="submit" class="search-button">
+            <i class="fa-solid fa-magnifying-glass fa-lg" style="color: #7b7699;"></i>
+          </button>
+          <%= form.select :dropdown_field, [], {}, data: { target: "search.dropdown" }, id: "dropdown-select" %>
+      <% end %>
+    </ul>
+    <ul class="navbar-nav"></ul>
   </div>
+</div>
 
     <%# Displays username if logged in %>
     <ul class="navbar-nav">
@@ -44,7 +43,7 @@
         </li>
         <%# button to user "message" - currently fake %>
         <li class="nav-item position-relative me-3 border border-primary">
-          <%= link_to "Message", "#", class: "nav-link pe-3 border border-primary"%>
+          <%= link_to "Messages", "#",  class: "nav-link" %>
           <span class="position-absolute top-50 start-100 translate-middle p-2 bg-info badge rounded-pill border border-primary">1
             <span class="visually-hidden">New alerts</span>
           </span>
