serach bar resizing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,6 +60,7 @@
     color:#7b7699;
     background: linear-gradient(#Aee7cf,#d3dbd7);
     border: none;
+    width: 225px;
   }
 
   .search-and-dropdown {
