fixed image and tags

--- a/app/views/mangas/_form_manga.html.erb
+++ b/app/views/mangas/_form_manga.html.erb
@@ -30,7 +30,7 @@
     <label for="images" class="drop-container">
       <span class="drop-title">Drop files here</span>
       or
-      <input type="file" id="images" accept="image/*" required>
+      <%= form.file_field :cover_image %>
     </label>
 
     <div>
