--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,6 +48,6 @@
 
   <% end %>
 </div>
-  <div class="d-flex justify-content-center border border-primary">
+  <div class="d-flex justify-content-center">
     <%= render "devise/shared/links" %>
   </div>
