--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,17 @@
-// manga cards
+// manga cards - manga index page
 .manga-cards{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 8px;
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
+
+// manga cards - manga dashboard page
+.manga-dashboard-cards{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 8px;
   padding-top: 0px;
   margin-top: 0px;
@@ -14,8 +24,8 @@
   justify-content: center;
   align-content: center;
   padding: 20px;
-  height: 250px;
-  width: 180px;
+  height: 280px;
+  width: 200px;
   border-radius: 5px;
   box-shadow: 0 0 16px rgba(0,0,0,0.2);
   cursor: pointer;
@@ -38,8 +48,8 @@
 //chapter cards
 .chapter-cards{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 8px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 10px;
   padding-top: 0px;
   margin-top: 0px;
   border-radius: 5px;
