--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@
     font-weight: bold;
   }
   .nav-link {
-    color: #7b7699;
+    color: #458469;
   }
 
   .nav-item {
@@ -87,11 +87,27 @@
   height: 36px;
   font-size: 1.2em;
 }
+
 li {
   list-style: none;
+  text-decoration: none;
+  color: black;
+  font-style: bold;
 }
-li:hover{
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  transition: 0.2s;
+
+a {
+  text-decoration: none;
+  color: black;
+  font-style: bold;
 }
+
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+// li:hover{
+//   color: white;
+//   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+//   transition: 0.2s;
+// }
