--- a/app/assets/stylesheets/pages/_chaptershow.scss
+++ b/app/assets/stylesheets/pages/_chaptershow.scss
@@ -13,9 +13,6 @@
     margin-bottom: 1rem;
   }
 
-  .chapter-header h2 {
-    margin: 0;
-  }
 
   .chapter-photos {
     overflow-y: scroll;
@@ -37,15 +34,6 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 1rem;
-  }
-
-  .button {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    background-color: #A8EACE;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
   }
 
 .form-label {
@@ -72,23 +60,9 @@
   cursor: pointer;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-  }
-
-  h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #000;
-  }
-
-
   .reviews-container {
-    background-color: #fff;
     padding: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -119,12 +93,12 @@ body {
     font-weight: bold;
   }
 
-  ul {
+  .review-ul {
     list-style-type: none;
     padding: 0;
   }
 
-  li {
+  .review-il {
     padding: 10px;
     margin-bottom: 10px;
     background-color: #f4f4f4;
