--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -6,3 +6,14 @@
   text-decoration: none;
   border-radius: 4px;
 }
+
+.bookmark-button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #FCBAD3;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
+  font-style: bold;
+}
