--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,11 +23,11 @@
   flex-direction:column;
   justify-content: center;
   align-content: center;
-  padding: 20px;
+  // padding: 20px;
   height: 280px;
   width: 200px;
   border-radius: 5px;
-  box-shadow: 0 0 16px rgba(0,0,0,0.2);
+  // box-shadow: 0 0 16px rgba(0,0,0,0.2);
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
 }
@@ -38,8 +38,8 @@
 
 // manga cover image
 .manga-cover-image {
-  height: 380px;
-  width: 300px;
+  // height: 380px;
+  // width: 300px;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
