remove border line

--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -1,5 +1,4 @@
-<div class="container border border-primary">
-<%# class="border border-primary" %>
+<div class="container">
   <%# manga cover image %>
   <div class="d-flex mx-4">
     <div class="manga-cover-image">
